OO-8237,OO-8363: online meetings and unified lecture blocks list